Fixed Scrollbar Bug

--- a/public/styles.css
+++ b/public/styles.css
@@ -25,5 +25,4 @@
 
 body {
   overflow-y: overlay;
-  scrollbar-width: none;
 }
